<resources>
    <string name="app_name">Intelligent Driving Assistant System</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_information">Information</string>
    <string name="title_history">History</string>
    <string name="title_advance_setting">Advance Setting</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_map">Maps</string>

    <string name="title_changelayout">ChangeLayout</string>


    <string name="title_distance">Distance</string>
    <string name="distance_total">Total distance :</string>
    <string name="distance_sinceStart">Since engine start :</string>
    <string name="distance_timeStart">Time since engine start :</string>

    <string name="title_energy">Energy</string>
    <string name="energy_fuel">Remaining fuel :</string>
    <string name="energy_distance">Remaining distance :</string>
    <string name="energy_rate">Fuel Eco./Con. :</string>
    <string name="energy_pressure">Fuel pressure :</string>

    <string name="title_velocity">Velocity</string>
    <string name="speed_velocity">Velocity : </string>
    <string name="speed_rpm">RPM :</string>
    <string name="speed_torque">Torque :</string>

    <string name="title_temperature">Temperature</string>
    <string name="temp_coolant">Coolant :</string>
    <string name="temp_engine">Engine Oil :</string>
    <string name="temp_MAF">Mass Air Flow (MAF) :</string>

    <string name="dummy_data">-</string>

    <string name="menu_add_widget">Add Widget</string>
    <string name="action_settings">setting</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_setting">Setting</string>

    <string-array name="TempUnit">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>



    <string-array name="SpeedUnit">
        <item>Km/Hr</item>
        <item>Mile/Hr</item>
    </string-array>

    <string-array name="UMode">
        <item>ECO</item>
        <item>SPORT</item>
        <item>CUSTOM</item>
    </string-array>

    <string-array name="ValTempUnit">
        <item>1</item>
        <item>2</item>
    </string-array>



    <string-array name="ValSpeedUnit">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="ValUMode">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>

