<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/Theme"
    android:gravity="center"
    tools:context=".MyActivity">

    <com.example.nepus.idash.ArcProgress
        android:id="@+id/speed_progress"
        custom:arc_bottom_text="SPEED"
        style="@style/Big_widget"
        />

    <TextView
        style="@style/Header"
        android:text="@string/title_velocity"/>

    <LinearLayout
        style="@style/LinearDetails">
        <TextView
            style="@style/Details"
            android:text="@string/speed_velocity" />

        <TextView
            style="@style/Details"
            android:id="@+id/val_speed"
            android:text="@string/dummy_data" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearDetails">
        <TextView
            style="@style/Details"
            android:text="@string/speed_rpm" />

        <TextView
            style="@style/Details"
            android:id="@+id/val_rpm"
            android:text="@string/dummy_data" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearDetails">
        <TextView
            style="@style/Details"
            android:text="@string/speed_torque" />

        <TextView
            style="@style/Details"
            android:id="@+id/val_torque"
            android:text="@string/dummy_data" />
    </LinearLayout>


</LinearLayout>