<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/Theme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emptyContent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_margin="30dp"
            android:text="waiting for widget"/>
    </LinearLayout>

    <TextView
        style="@style/Header"
        android:text="@string/title_temperature"/>

    <LinearLayout
        style="@style/LinearDetails">
        <TextView
            style="@style/Details"
            android:text="@string/temp_coolant" />

        <TextView
            style="@style/Details"
            android:id="@+id/val_speed"
            android:text="@string/dummy_data" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearDetails">
        <TextView
            style="@style/Details"
            android:text="@string/temp_engine" />

        <TextView
            style="@style/Details"
            android:id="@+id/val_rpm"
            android:text="@string/dummy_data" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearDetails">
        <TextView
            style="@style/Details"
            android:text="@string/temp_MAF" />

        <TextView
            style="@style/Details"
            android:id="@+id/val_torque"
            android:text="@string/dummy_data" />
    </LinearLayout>


</LinearLayout>